--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -46,7 +46,9 @@
                 <p class="center">
                     <br>
                     <br>My name is Joshua Dishong. I am a full-stack software developer, with added experience in Unity and Unreal Engine.
-                    <br>
+                    <br> <a href="https://docs.google.com/document/d/1xVQzFfeZLWTzbboi1b6Nu-MEhOoyjF3rg0ZSRiZQmR8/edit?usp=sharing" target="_blank">My Resume</a>
+                         &nbsp; | &nbsp;
+                         <a href="https://www.linkedin.com/in/dishongdevelopment/" target="_blank">My LinkedIn</a>
                     <br> Thank you for stopping by and enjoy!
                 </p>
             </strong>
